<?xml version="1.0"?>
<package format="2">
  <name>contest</name>
  <version>0.0.0</version>
  <description>Merged package for Control and LiDAR Tracking</description>

  <maintainer email="autonav@todo.todo">autonav</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>morai_msgs</depend>
  <depend>roslib</depend>

  <depend>visualization_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <depend>libpcl-all-dev</depend>
  <depend>eigen</depend>
  <depend>lidar_code</depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
